test/classes/vass/ref-like-intents/out-superclass.good
out-superclass.chpl:14: error: unresolved call 'procOutD(borrowed C?)'
out-superclass.chpl:6: note: this candidate did not match: procOutD(out arg: borrowed D?)
out-superclass.chpl:14: note: because actual argument #1 with type 'borrowed C?'
out-superclass.chpl:6: note: is passed to formal 'out arg: borrowed D?'
